DBZ-9110 Move Debezium common code to a dedicated common module (debezium-common)